@@ -1,6 +1,6 @@
 {% if show_menu %}
     <div class="dropdown-toggle icon icon-arrow-up"></div>
-    <ul role="menu">
+    <ul>
         {% for item in rendered_menu_items %}{{ item }}{% endfor %}
     </ul>
 {% endif %}
