@@ -1,5 +1,5 @@
 {% load i18n %}
-<nav class="listing-filter" role="navigation">
+<nav class="listing-filter">
     <h3 class="filter-title">{% trans "Other searches" %}</h3>
     <ul class="filter-options">
         {{ options_html }}
