@@ -11,7 +11,7 @@
 
         {% if user_can_delete %}
             <div class="dropdown-toggle icon icon-arrow-up"></div>
-            <ul role="menu">
+            <ul>
                 <li><a href="{{ view.delete_url }}" class="shortcut">{% trans "Delete" %}</a></li>
             </ul>
         {% endif %}
